# corkboard

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ANALYTICS_EVENTS.md  ANALYTICS_IMPLEMENTATION.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.sites  MULTI_DATABASE_SUPPORT.md  README.md  analytics-metadata.json  botPolicy.yaml  changeover.sh  corkboard.code-workspace  docker-compose.yml  docker-entrypoint.sh  install_dev.sh  justfile  metadata.json  pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt  sites.db
.github/workflows/: build-and-test.yml  deploy-production.yml  test.yml
analytics/: .gitkeep  README.md
config/: asgi.py  prod_settings.py  settings.py  urls.py  views.py
django_plugins/: api_key_auth.py  datasette_by_subdomain.py
docs/: OIDC_SETUP.md  homepage-redesign-notes.md
docs/deployment/: caddyfile-changes.md
docs/features/: django-homepage.md
docs/plans/: 2025-11-27-analytics-design.md  2025-11-27-analytics-implementation.md  2025-11-28-citation-metadata-design.md  2025-11-28-citation-metadata-implementation.md  2025-11-29-api-key-auth-design.md  2025-11-29-api-key-auth-implementation.md  2025-11-30-observability-design.md  2026-01-24-django-homepage-design.md  2026-01-24-django-homepage.md  2026-02-20-homepage-ux-improvements-design.md  2026-02-20-homepage-ux-improvements.md  2026-02-22-homepage-redesign-design.md  2026-02-22-homepage-redesign.md  2026-03-02-live-deploy-map-design.md  2026-03-02-live-deploy-map-implementation.md
docs/superpowers/plans/: 2026-03-23-local-datasette-command.md  2026-03-23-page-card-layout.md  2026-04-01-template-refactor.md
docs/superpowers/specs/: 2026-03-23-local-datasette-command-design.md  2026-03-23-page-card-layout-design.md  2026-04-01-template-refactor-design.md
pages/: admin.py  models.py  utils.py  views.py
pages/management/commands/: datasette.py
pages/migrations/: 0001_initial.py
plugins/: civic_analytics.py  clip_to_notebook.py  corkboard.py  date_link.py  exception_handler.py  json_columns.py  opensearch.py  page_image.py  posthog.py  robots.py  search_all.py  search_highlight.py  template_vars.py  tracing.py  umami.py
plugins/static/: page-card.css
scripts/: retrieve_umami_analytics.py
static/: how.html  index.html  nav-styles.css  page-card.css  privacy.html  rss.xml
templates/config/: metadata.json
templates/datasette/: 404.html  _footer.html  _page_card.html  _table-meetings-agendas.html  _table-meetings-minutes.html  base.html  index.html  row-meetings-agendas.html  row-meetings-minutes.html  search_all.html  table-meetings-agendas.html  table-meetings-minutes.html
templates/pages/: _content_page.html  _finder.html  _footer.html  _hero.html  _map_data.html  _navigation.html  _results.html  _sites_content.html  _sites_table.html  _sites_table_only.html  base.html  disclaimer.html  home.html  how.html  index.html  map.html  privacy.html  researchers.html  rss.xml  why.html
templates/sites-database/: _table-sites-sites.html  base.html  table-sites-sites.html
tests/: README.md  conftest.py  test_api_key_auth.py  test_config_views.py  test_datasette_by_subdomain.py  test_datasette_command.py  test_home_view.py  test_json_columns.py  test_page_card_template.py  test_pages_utils.py  test_pages_views.py  test_recent_deploys.py  test_retrieve_analytics.py  test_site_model.py  test_sites_search_view.py
tests/test_plugins/: __init__.py  test_civic_analytics.py  test_corkboard.py  test_search_all.py  test_simple_plugins.py  test_tracing.py  test_umami.py
