[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["config", "pages", "django_plugins", "plugins", "scripts"]

[project]
name = "corkboard"
version = "0.1.0"
description = "CivicBand - Government and Municipality Meeting Data"
requires-python = ">=3.11"
authors = [
    {name = "CivicBand Team", email = "hello@civic.band"},
]
readme = "README.md"
license = {file = "LICENSE"}

dependencies = [
    "Django>=4.2.0",
    "datasette>=0.64.0",
    "djp>=0.0.6",
    "jinja2>=3.0.0",
    "sqlite-utils>=3.30.0",
    "httpx>=0.24.0",
    "requests>=2.28.0",
    "whitenoise>=6.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-django>=4.5.0",
]
lint = [
    "ruff>=0.1.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-django>=4.5.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
pythonpath = ["."]
asyncio_mode = "auto"
DJANGO_SETTINGS_MODULE = "config.settings"
addopts = "-v"
markers = [
    "unit: Unit tests (default)",
    "integration: Integration tests",
    "django_db: Tests that require database access",
]

[tool.ruff]
line-length = 88
target-version = "py311"

# Exclude a variety of commonly ignored directories.
exclude = [
    ".git",
    ".hg",
    ".mypy_cache",
    ".tox",
    ".venv",
    "_build",
    "buck-out",
    "build",
    "dist",
]

[tool.ruff.lint]
# Enable pycodestyle (E), Pyflakes (F), isort (I), and more
select = ["E", "F", "I", "B", "C4", "ARG", "SIM", "TID", "PL"]
ignore = [
    "PLR2004",  # Magic value comparisons - common in tests and configs
    "PLR0913",  # Too many arguments - hookimpl functions require specific signatures
    "PLR0912",  # Too many branches - acceptable for complex ASGI wrappers
    "PLR0915",  # Too many statements - acceptable for complex functions
    "ARG001",   # Unused arguments - hookimpl requires specific signatures
    "E402",     # Module level import not at top - Django settings pattern
    "F403",     # Star imports - Django settings pattern
    "F405",     # May be undefined from star import - Django settings pattern
    "E501",     # Line too long - allow for readability in configs/URLs
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR2004", "ARG001", "E501"]  # Tests can have magic numbers, unused args, long lines
"config/settings.py" = ["E402", "F811"]    # Django settings has specific import patterns
"config/prod_settings.py" = ["F403", "F405"]  # Production settings uses star import

[tool.ruff.lint.isort]
known-first-party = ["corkboard", "config", "django_plugins", "pages", "plugins"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.uv]
pip = { extra-index-url = [] }